{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 15,
  "lineage": "749fb888-55ad-c47b-863c-70a2d613ea3e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05623d9113294bf22",
            "arn": "arn:aws:ec2:ca-west-1:513118889905:elastic-ip/eipalloc-05623d9113294bf22",
            "domain": "vpc",
            "id": "eipalloc-05623d9113294bf22",
            "network_border_group": "ca-west-1",
            "public_dns": "ec2-40-177-25-51.ca-west-1.compute.amazonaws.com",
            "public_ip": "40.177.25.51",
            "public_ipv4_pool": "amazon",
            "region": "ca-west-1",
            "tags": {
              "Name": "todoApp-Nat-eip"
            },
            "tags_all": {
              "Name": "todoApp-Nat-eip"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:513118889905:internet-gateway/igw-01ba208af33481bd5",
            "id": "igw-01ba208af33481bd5",
            "owner_id": "513118889905",
            "region": "ca-west-1",
            "tags": {
              "Name": "todoApp-igw"
            },
            "tags_all": {
              "Name": "todoApp-igw"
            },
            "vpc_id": "vpc-08c9df8a2d8befdf9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05623d9113294bf22",
            "association_id": "eipassoc-0612d632594f12078",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0fc84b4d082289bbf",
            "network_interface_id": "eni-0be1da2c10d0b3c00",
            "private_ip": "10.0.0.17",
            "public_ip": "40.177.25.51",
            "region": "ca-west-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0941f5add7d4827ff",
            "tags": {
              "Name": "todoApp-nat-ca-west-1a"
            },
            "tags_all": {
              "Name": "todoApp-nat-ca-west-1a"
            },
            "vpc_id": "vpc-08c9df8a2d8befdf9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:513118889905:route-table/rtb-087a6265e4bcdf60e",
            "id": "rtb-087a6265e4bcdf60e",
            "owner_id": "513118889905",
            "propagating_vgws": [],
            "region": "ca-west-1",
            "route": [],
            "tags": {
              "Name": "todoApp-private-rt"
            },
            "tags_all": {
              "Name": "todoApp-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c9df8a2d8befdf9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "513118889905",
            "id": "rtb-087a6265e4bcdf60e",
            "region": "ca-west-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:513118889905:route-table/rtb-0ccb372da3080c9c6",
            "id": "rtb-0ccb372da3080c9c6",
            "owner_id": "513118889905",
            "propagating_vgws": [],
            "region": "ca-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01ba208af33481bd5",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "todoApp-public-rt"
            },
            "tags_all": {
              "Name": "todoApp-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c9df8a2d8befdf9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "513118889905",
            "id": "rtb-0ccb372da3080c9c6",
            "region": "ca-west-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d0500389103eda1",
            "region": "ca-west-1",
            "route_table_id": "rtb-087a6265e4bcdf60e",
            "subnet_id": "subnet-016ff1613444b3dd3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c16aa26718eb0018",
            "region": "ca-west-1",
            "route_table_id": "rtb-087a6265e4bcdf60e",
            "subnet_id": "subnet-0de2df75742426c69"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0773695dd0a93cea7",
            "region": "ca-west-1",
            "route_table_id": "rtb-0ccb372da3080c9c6",
            "subnet_id": "subnet-0941f5add7d4827ff"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0df7936ecdb88fd2c",
            "region": "ca-west-1",
            "route_table_id": "rtb-0ccb372da3080c9c6",
            "subnet_id": "subnet-004161ca9e4e8d73f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:513118889905:subnet/subnet-016ff1613444b3dd3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-west-1a",
            "availability_zone_id": "caw1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-016ff1613444b3dd3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "513118889905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ca-west-1",
            "tags": {
              "Name": "todoApp-private-subnet-1-ca-west-1a"
            },
            "tags_all": {
              "Name": "todoApp-private-subnet-1-ca-west-1a"
            },
            "vpc_id": "vpc-08c9df8a2d8befdf9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "513118889905",
            "id": "subnet-016ff1613444b3dd3",
            "region": "ca-west-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:513118889905:subnet/subnet-0de2df75742426c69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-west-1b",
            "availability_zone_id": "caw1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de2df75742426c69",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "513118889905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ca-west-1",
            "tags": {
              "Name": "todoApp-private-subnet-2-ca-west-1b"
            },
            "tags_all": {
              "Name": "todoApp-private-subnet-2-ca-west-1b"
            },
            "vpc_id": "vpc-08c9df8a2d8befdf9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "513118889905",
            "id": "subnet-0de2df75742426c69",
            "region": "ca-west-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:513118889905:subnet/subnet-0941f5add7d4827ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-west-1a",
            "availability_zone_id": "caw1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0941f5add7d4827ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "513118889905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ca-west-1",
            "tags": {
              "Name": "todoApp-public-subnet-1-ca-west-1a"
            },
            "tags_all": {
              "Name": "todoApp-public-subnet-1-ca-west-1a"
            },
            "vpc_id": "vpc-08c9df8a2d8befdf9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "513118889905",
            "id": "subnet-0941f5add7d4827ff",
            "region": "ca-west-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:513118889905:subnet/subnet-004161ca9e4e8d73f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-west-1b",
            "availability_zone_id": "caw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004161ca9e4e8d73f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "513118889905",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ca-west-1",
            "tags": {
              "Name": "todoApp-public-subnet-2-ca-west-1b"
            },
            "tags_all": {
              "Name": "todoApp-public-subnet-2-ca-west-1b"
            },
            "vpc_id": "vpc-08c9df8a2d8befdf9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "513118889905",
            "id": "subnet-004161ca9e4e8d73f",
            "region": "ca-west-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-west-1:513118889905:vpc/vpc-08c9df8a2d8befdf9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-0272c400b3fb287b1",
            "default_route_table_id": "rtb-093cd0721ddcabe16",
            "default_security_group_id": "sg-00b0f95c63f257a25",
            "dhcp_options_id": "dopt-097a80ea079846246",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08c9df8a2d8befdf9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-093cd0721ddcabe16",
            "owner_id": "513118889905",
            "region": "ca-west-1",
            "tags": {
              "Name": "todoapp-vpc"
            },
            "tags_all": {
              "Name": "todoapp-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "513118889905",
            "id": "vpc-08c9df8a2d8befdf9",
            "region": "ca-west-1"
          }
        }
      ]
    }
  ]
}